Add of a few functionalities tu calculate the spline more correctly

--- a/splines.html
+++ b/splines.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+ 	<meta charset="UTF-8"> 
 	<body>
 
 	    <canvas id="canvas"></canvas>
 		
 		<link rel="stylesheet" type="text/css" href="fullWindowCanvas.css">
+
+		<script src = "suchMath.js"></script>
 
 		<script src = "splines.js"></script>
 		
