ADD: Functional, but way slower, splines method.

--- a/splines.html
+++ b/splines.html
@@ -9,7 +9,7 @@
 
 		<script src = "suchMath.js"></script>
 
-		<script src = "splines.js"></script>
+		<script src = "newSplines.js"></script>
 		
 	</body>
 </html>
